--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -36,6 +36,15 @@ jobs:
             qt-static-cache-key: 'v22' # required for static qt; update this to force rebuilding static Qt
             jacktrip-path: jacktrip
             binary-path: binary
+            
+          - name: Linux-x64-bundled-rtaudio
+            runs-on: ubuntu-18.04
+            rtaudio: true
+            build-rtaudio: true
+            static-qt-version: 5.12.11 # if set, it will enable static Qt build
+            qt-static-cache-key: 'v22' # required for static qt; update this to force rebuilding static Qt
+            jacktrip-path: jacktrip
+            binary-path: binary
 
           - name: Linux-x64-dynamic-nogui
             runs-on: ubuntu-18.04
@@ -51,6 +60,7 @@ jobs:
           - name: macOS-x64
             runs-on: macos-10.15
             rtaudio: true
+            build-rtaudio: false
             static-qt-version: 5.12.11 # if set, it will enable static Qt build
             qt-static-cache-key: 'v05' # required for static qt; update this to force rebuilding static Qt
             weakjack: true
@@ -58,6 +68,16 @@ jobs:
             binary-path: binary # directory relative to build path; triggers artifact upload for jacktrip binary
             bundle-path: bundle # directory relative to build path; triggers application bundle creation and upload (macOS)
             installer-path: installer # directory relative to build path; triggers installer creation and upload
+
+          - name: macOS-x64-bundled-rtaudio
+            runs-on: macos-10.15
+            rtaudio: true
+            build-rtaudio: true
+            static-qt-version: 5.12.11 # if set, it will enable static Qt build
+            qt-static-cache-key: 'v05' # required for static qt; update this to force rebuilding static Qt
+            weakjack: true
+            jacktrip-path: jacktrip # relative to build path
+            binary-path: binary # directory relative to build path; triggers artifact upload for jacktrip binary
 
           # - name: Windows-dynamic
           #   runs-on: windows-2019
@@ -68,12 +88,24 @@ jobs:
             # suffix: installer
             runs-on: windows-2019
             rtaudio: true
+            build-rtaudio: false
             static-qt-version: 5.15.2
             qt-static-cache-key: 'v04' # required for static qt; update this to force rebuilding static Qt
             weakjack: true
             jacktrip-path: release/jacktrip.exe
             binary-path: binary # directory relative to build path; triggers artifact upload for jacktrip binary
             installer-path: installer # directory relative to build path; triggers installer creation and upload
+            
+          - name: Windows-x64-bundled-rtaudio
+            # suffix: installer
+            runs-on: windows-2019
+            rtaudio: true
+            build-rtaudio: true
+            static-qt-version: 5.15.2
+            qt-static-cache-key: 'v04' # required for static qt; update this to force rebuilding static Qt
+            weakjack: true
+            jacktrip-path: release/jacktrip.exe
+            binary-path: binary # directory relative to build path; triggers artifact upload for jacktrip binary
 
     env:
       BUILD_PATH: ${{ github.workspace }}/builddir
@@ -107,6 +139,12 @@ jobs:
           else
             sudo apt-get install --yes qt5-default qt5-qmake qttools5-dev
           fi
+          if [[ "${{ matrix.rtaudio }}" == true ]] && [[ "${{ matrix.build-rtaudio }}" != true ]]; then 
+            sudo apt-get install --yes rtaudio
+          fi
+          if [[ "${{ matrix.build-rtaudio }}" == true ]]; then 
+            sudo apt-get install --yes libasound2-dev libpulse-dev
+          fi
       - name: install dependencies for macOS
         if: runner.os == 'macOS'
         env:
@@ -123,7 +161,7 @@ jobs:
             brew install qt5
             brew link qt5 --force
           fi
-          if [[ "${{ matrix.rtaudio }}" == true ]]; then 
+          if [[ "${{ matrix.rtaudio }}" == true ]] && [[ "${{ matrix.build-rtaudio }}" != true ]]; then 
             brew install rt-audio
             rm -f `brew --prefix rt-audio`/lib/*.dylib # remove the dynamic library, we want static only
           fi
@@ -136,7 +174,7 @@ jobs:
         run: |
           choco install jack --version=1.9.17
           choco install openssl
-          if [[ "${{ matrix.rtaudio }}" == true ]]; then 
+          if [[ "${{ matrix.rtaudio }}" == true ]] && [[ "${{ matrix.build-rtaudio }}" != true ]]; then 
             choco install pkgconfiglite
             vcpkg install rtaudio[asio] --triplet=x64-mingw-static
             echo "PKG_CONFIG_PATH=$VCPKG_INSTALLATION_ROOT\installed\x64-mingw-static\lib\pkgconfig" >> $GITHUB_ENV
@@ -228,6 +266,9 @@ jobs:
           fi
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="weakjack $CONFIG_STRING"
+          fi
+          if [[ "${{ matrix.build-rtaudio }}" == true ]]; then 
+            CONFIG_STRING="build_rtaudio $CONFIG_STRING"
           fi
           ./build $CONFIG_STRING
       - name: compress the binary
