Update installer scripts
Add an option to specify the binary location in the MacOS package script to allow easier signing of downloaded github artifacts.

Allow upgrades with Windows installer.

Use a smartpointer for the AudioTester so that we don't need to keep the Settings object around.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ set(CMAKE_OSX_DEPLOYMENT_TARGET 10.13)
 project(QJackTrip)
 
 set(nogui FALSE)
-set (rtaudio TRUE)
-set (weakjack TRUE)
+set(rtaudio TRUE)
+set(weakjack TRUE)
+add_compile_definitions(QT_OPENSOURCE)
 
 if (nogui)
   add_compile_definitions(NO_GUI)
