--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,4 +3,5 @@ option('rtaudio', type : 'feature', value : 'auto', description: 'Build with RtA
 option('jack', type : 'feature', value : 'auto', description: 'Build with JACK Backend')
 option('weakjack', type : 'boolean', value : 'false', description: 'Weak link JACK library')
 option('nogui', type : 'boolean', value : 'false', description: 'Build without graphical user interface')
+option('novs', type : 'boolean', value : 'false', description: 'Build without Virtual Studio support')
 option('profile', type: 'combo', choices: ['default', 'development'], value: 'default', description: 'Choose build profile / Sets desktop id accordingly')
