--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -276,6 +276,9 @@ jobs:
         shell: bash
         run: |
           choco install jack --version=1.9.17 --no-progress
+          if [[ "${{ matrix.build-system }}" == "qmake" && -n "${{ matrix.static-qt-version }}" && -n "${{ matrix.vcpkg-triplet }}" ]]; then 
+            vcpkg install openssl --triplet="${{ matrix.vcpkg-triplet }}"
+          fi
           if [[ "${{ matrix.system-rtaudio }}" == true && -n "${{ matrix.vcpkg-triplet }}" ]]; then 
             choco install pkgconfiglite --no-progress
             # check out an older version of rtaudio library, see issue #408
@@ -342,13 +345,6 @@ jobs:
           # install
           echo "installing Qt"
           make install
-      - name: install openssl for Windows static builds
-        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os == 'Windows'
-        shell: bash
-        run: |
-          if [[ -n "${{ matrix.vcpkg-triplet }}" ]]; then 
-            vcpkg install openssl --triplet="${{ matrix.vcpkg-triplet }}"
-          fi
       - name: build static Qt on Windows
         if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os == 'Windows'
         shell: cmd
